--- a/client/src/styles/custom-calendar.css
+++ b/client/src/styles/custom-calendar.css
@@ -1,7 +1,7 @@
 
 .custom-calendar {
     --rdp-accent-color: #7B1984; 
-    --rdp-background-color: #fce7f3; /* soft pink */
+    --rdp-background-color: #fce7f3;
     font-family: inherit;
   }
   
